# pi-server

./: .gitignore  readme.md
apps/game-of-life/: Cargo.toml  test.html
apps/game-of-life/src/: game.rs  lib.rs
web/: .dockerignore  Cargo.toml  build.rs
web/blogs/: 2024-03-03:First_blog_test.md  2024-03-11:Linux_zero-copy_IO.md
web/config/: dev.yaml  docker.yaml  styles.css
web/public/: secret.txt
web/public/highlight/: highlight.min.js  theme.css
web/scripts/: build-docker.sh  build-wasm.sh  copy-to-server.sh  cross.dockerfile  native.dockerfile  run-docker-debug.sh  setup-docker-cross.sh
web/src/: app.rs  config.rs  lib.rs  main.rs  router.rs  statistics.rs  telemetry.rs
web/src/components/: card.rs  head.rs  mod.rs  nav.rs
web/src/middleware/: conn_limit.rs  mod.rs  rate_limit.rs  stats.rs  tracing.rs
web/src/pages/: blog.rs  home.rs  mod.rs  projects.rs  traits.rs
web/src/pages/blog/: entry.rs  item.rs  loader.rs  mod.rs  render.rs  renderer.rs
web/src/pages/projects/: demo.rs  mod.rs
web/wasm/game-of-life/: Cargo.toml  test.html  test.sh
