[package]
name = "game-of-life"
version = "0.1.0"
authors = ["mihneabuz <mihneabuzatu88@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
bitvec = "1.0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window", "Document", "Element", "HtmlElement", "Node", "HtmlCollection"
]

[profile.release]
opt-level = "s"
lto = true
